Bug 1451262 - Call NS_ProcessPendingEvents after StopSSLServerCertVerificationThreads. r=mayhemer, a=RyanVM

If there are still pending events after we null out gSocketThread, OnSocketThread() will always return false, which can trigger assertions.

MozReview-Commit-ID: CovFIU3cKL